<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:padding="@dimen/padding_medium"
    >

    <Button
        android:id="@+id/btn_and"
        style="@style/SearchNewsKeywordToggle"
        android:text="@string/news_search_query_and"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_or"
        />

    <Button
        android:id="@+id/btn_or"
        style="@style/SearchNewsKeywordToggle"
        android:alpha="0.2"
        android:text="@string/news_search_query_or"
        app:layout_constraintLeft_toRightOf="@+id/btn_and"
        app:layout_constraintRight_toRightOf="parent"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:theme="@style/newsSearchTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/btn_and"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_keyword"
            style="@style/news_search_et"
            android:hint="@string/news_search_keywords"
            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/newsSearchTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/til_keyword"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_name"
            style="@style/news_search_et"
            android:hint="@string/news_search_name"
            />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>