<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fillViewport="true">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mobile_background_login">

        <ImageView
            android:id="@+id/stock_logo"
            android:layout_width="515dp"
            android:layout_height="79dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_pre_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_desc_logo_small"
            android:paddingTop="@dimen/padding_small"
            android:src="@drawable/mobile_stock_logo" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/loginTextInputLayout"
            app:errorEnabled="true"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_below="@+id/stock_logo"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_username"
                style="@style/login_et"
                android:hint="@string/username"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/loginTextInputLayout"
            app:errorEnabled="true"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_below="@+id/til_username"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                style="@style/login_et"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_remember_me"
            style="@style/login_checkbox"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_below="@+id/til_password"
            android:text="@string/remember_password"
            />

        <Button
            android:id="@+id/btn_login"
            style="@style/login_btn"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_below="@+id/cb_remember_me"
            android:layout_marginBottom="@dimen/margin_small"
            />


        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".5"
            android:layout_toLeftOf="@+id/tv_divider"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tv_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:alpha=".5"
            android:text="@string/vertical_dash"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tv_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".5"
            android:text="@string/support"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/tv_divider"
            android:textColor="@color/white"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/loading_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone"
        android:alpha="0.5">
        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>

</ScrollView>