<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:padding="@dimen/padding_large"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_label"
        android:textColor="#DE000000"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/tv_quote_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Quote List Count: 7/100"
        android:textColor="#61000000"
        android:textSize="12sp"
        android:gravity="right"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_title"
        android:layout_marginLeft="@dimen/margin_small"
        app:layout_constraintHorizontal_bias="0.413"/>

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/enter_a_label_name_to_add_to_your_symbols_page"
        android:textColor="#8A000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        />

    <EditText
        android:id="@+id/ed_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:backgroundTint="#61000000"
        android:hint="@string/enter_label_name"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="#DE000000"
        android:textColorHint="#61000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_msg"
        />

</android.support.constraint.ConstraintLayout>